@@ -1,3 +1,11 @@
+Knot Resolver 5.x.y (2021-0m-dd)
+================================
+
+Bugfixes
+--------
+- trust_anchors.set_insecure: improve precision (#673, !1177)
+
+
 Knot Resolver 5.3.2 (2021-05-05)
 ================================
 
